src/objects/CventEvents__Event__c.object
<CustomObject>
    <description>Represents the event defined in Cvent.</description>
    <fields>
        <fullName>ApprovalFlowRequired__c</fullName>
        <label>Approval Flow Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>infrastructure-journal-global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Address1__c</fullName>
        <label>Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Address2__c</fullName>
        <label>Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Address3__c</fullName>
        <label>Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AgendaLink__c</fullName>
        <label>Agenda Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AllowAddInvitationList__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reflects whether &apos;Invite&apos; button is shown on the event details page.</description>
        <label>Allow Add To Invitation List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AllowInvitation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Invitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AllowRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ArchiveDate__c</fullName>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ArchiveTime__c</fullName>
        <label>Archive Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Code__c</fullName>
        <label>Code</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CountryCode__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CountryName__c</fullName>
        <label>Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CreationDate__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CreationTime__c</fullName>
        <label>Creation Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CurrencyName__c</fullName>
        <label>Currency Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Description__c</fullName>
        <label>Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EndTime__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EventFormat__c</fullName>
        <label>Event Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EventStatus__c</fullName>
        <inlineHelpText>Denotes if the event is in the past, present or future.</inlineHelpText>
        <label>Event Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EventStub__c</fullName>
        <externalId>true</externalId>
        <label>Event Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HasExternalAuthentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has External Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HasFee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_InvitationLink__c</fullName>
        <label>Invitation Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsTestMode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LanguageCountry__c</fullName>
        <label>Language Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LastModifiedTime__c</fullName>
        <label>Last Modified Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Latitude__c</fullName>
        <label>Latitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LaunchDate__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LaunchTime__c</fullName>
        <label>Launch Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Longitude__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PlannerCompany__c</fullName>
        <label>Planner Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PlannerEmail__c</fullName>
        <label>Planner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PlannerFirstName__c</fullName>
        <label>Planner First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PlannerLastName__c</fullName>
        <label>Planner Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PlannerPrefix__c</fullName>
        <label>Planner Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PlannerTitle__c</fullName>
        <label>Planner Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PlanningStatus__c</fullName>
        <label>Planning Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RegistrationDeadlineDate__c</fullName>
        <label>Registration Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RegistrationDeadlineTime__c</fullName>
        <label>Registration Deadline Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RegistrationLink__c</fullName>
        <label>Registration Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RequireNomination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Nomination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_StartTime__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_StateCode__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_StateName__c</fullName>
        <label>State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Status__c</fullName>
        <inlineHelpText>Denotes the registration status for the event.</inlineHelpText>
        <label>Registration Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>No Registration Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_SummaryLink__c</fullName>
        <label>Summary Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_TimeZoneAbbreviation__c</fullName>
        <label>Time Zone Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_TimeZone__c</fullName>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_TypeName__c</fullName>
        <label>Registration Is Open To</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EuromoneyDivision__c</fullName>
        <label>Euromoney Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>asset-management</fullName>
                </value>
                <value>
                    <fullName>Derivia</fullName>
                </value>
                <value>
                    <fullName>Fastmarkets</fullName>
                </value>
                <value>
                    <fullName>financial-and-professional-services</fullName>
                </value>
                <value>
                    <fullName>Invisso</fullName>
                </value>
                <value>
                    <fullName>techoraco</fullName>
                </value>
                <value>
                    <fullName>Telecoms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventCostCentre__c</fullName>
        <label>Event Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventThumbnailImage__c</fullName>
        <label>Event Thumbnail Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTitle__c</fullName>
        <label>Event Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>Event Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delinian (IJGlobal) Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC (Asia-Pacific)</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>MENA (Middle East and North Africa)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesforceUID__c</fullName>
        <label>Salesforce UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cvent Event</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_Title__c</columns>
        <columns>CventEvents__pkg_Status__c</columns>
        <columns>CventEvents__pkg_Code__c</columns>
        <columns>CventEvents__pkg_StartDate__c</columns>
        <columns>CventEvents__pkg_StartTime__c</columns>
        <columns>CventEvents__pkg_TimeZone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__UpcomingEvents</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_Title__c</columns>
        <columns>CventEvents__pkg_Status__c</columns>
        <columns>CventEvents__pkg_Code__c</columns>
        <columns>CventEvents__pkg_StartDate__c</columns>
        <columns>CventEvents__pkg_StartTime__c</columns>
        <columns>CventEvents__pkg_TimeZone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_Status__c</field>
            <operation>equals</operation>
            <value>Active,Closed,Pending</value>
        </filters>
        <filters>
            <field>CventEvents__pkg_StartDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Events</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CventEvents__EventFiltering__c</fullName>
        <label>Event Filtering</label>
    </sharingReasons>
</CustomObject>